--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
----
-title: 주형
----
-
-<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
-
 <h2>Posts</h2>
 $partial("templates/post-list.html")$
 
-<p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
+<p><a href="/archive.html">나머지 글들도 보기</a>.</p>
