--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
+<p><a href="/tags/haskell.html">하스켈 글들만 보기</a>.</p>
+
 <h2>Posts</h2>
+
 $partial("templates/post-list.html")$
 
 <p><a href="/archive.html">나머지 글들도 보기</a>.</p>
