--- a/customTags/2016-06-07-foldr-presentation.html
+++ b/customTags/2016-06-07-foldr-presentation.html
@@ -7,3 +7,6 @@
 <a href="http://www.cs.nott.ac.uk/~pszgmh/fold.pdf">A tutorial on the universality and expressiveness of fold</a>
 
 $partial("templates/post-list.html")$
+
+<a href="/ppts/2016-06-07-foldr.html"> 발표자료 </a>
+
